# chronocolour-4k-ai

./: .env.example  .gitignore  Makefile  README.md  Setup.md  docker-compose.infra.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  pyproject.toml  requirements-gpu.txt  requirements.txt
backend/ai/: __init__.py  base.py  gpu_manager.py  model_registry.py
backend/ai/analyzers/: __init__.py
backend/ai/colorization/: __init__.py
backend/ai/consistency/: __init__.py
backend/ai/detection/: __init__.py
backend/ai/face/: __init__.py
backend/ai/flow/: __init__.py
backend/ai/hdr/: __init__.py
backend/ai/restoration/: __init__.py
backend/ai/scene/: __init__.py
backend/ai/segmentation/: __init__.py
backend/ai/superresolution/: __init__.py
backend/ai/tracking/: __init__.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py  jobs.py  results.py  router.py  storage.py  videos.py  websocket.py
backend/app/core/: __init__.py  database.py  exceptions.py  redis.py  storage.py
backend/app/models/: __init__.py  job.py  video.py
backend/app/schemas/: __init__.py  job.py  pipeline.py  video.py
backend/app/services/: __init__.py  job_service.py  video_service.py
backend/app/workers/: __init__.py  celery_app.py
backend/app/workers/tasks/: __init__.py  analyze.py  audio_sync.py  colorize.py  face_restore.py  flicker_correct.py  hdr_enhance.py  object_detect.py  object_track.py  optical_flow.py  orchestrator.py  quality_assess.py  reconstruct.py  restore.py  segment.py  (+3 more)
(+15 files in other folders)
